add mutations and subscription examples